<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.picker.PickerViewActivity">

    <include layout="@layout/common_toolbar" />

    <Button
        android:id="@+id/chooseDateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_date" />

    <Button
        android:id="@+id/chooseTimeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_time" />

    <Button
        android:id="@+id/chooseCityButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_city" />
</LinearLayout>