<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.compressor.CompressorActivity">

    <include layout="@layout/common_toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/chooseButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_picture" />

            <TextView
                android:id="@+id/beforeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/common_padding_start_end"
                android:text="@string/text_image_before_compress" />

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/draweeView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:viewAspectRatio="1" />

            <TextView
                android:id="@+id/afterText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/common_padding_start_end"
                android:text="@string/text_image_after_compress" />

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/compressdDraweeView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:viewAspectRatio="1" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>